--- a/src/app/home-pages/home/home.page.html
+++ b/src/app/home-pages/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar style="min-height: 60px!important;">
     <ion-menu-button slot="start" *ngIf="!config.appNavigationTabs">
       <ion-icon name="menu"></ion-icon>
     </ion-menu-button>
