--- a/src/global.scss
+++ b/src/global.scss
@@ -48,7 +48,7 @@
 
 ion-header {
   ion-toolbar {
-    --background: var(--ion-color-primary);
+    --background: #000000;
     --color: var(--ion-color-primary-contrast);
     ion-title {
       ion-img {
