--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,28 +1,28 @@
-<ion-tabs #appTabs >
+<ion-tabs style="background-color: #000000;" #appTabs >
   <ion-tab-bar slot="bottom" (click)="ionChange(appTabs)">
     <ion-tab-button tab="{{config.getCurrentHomePage()}}">
-      <img *ngIf="showImg()" src="assets/left-menu-icon/home.png">
+      <img *ngIf="showImg()" src="assets/icons-01.svg">
       <ion-icon *ngIf="!showImg()" name="home"></ion-icon>
       <ion-label>
         <b>{{'Home'|translate}}</b>
       </ion-label>
     </ion-tab-button>
     <ion-tab-button tab="search">
-      <img *ngIf="showImg()" src="assets/left-menu-icon/search.png">
+      <img *ngIf="showImg()" src="assets/icons-02.svg">
       <ion-icon *ngIf="!showImg()" name="search"></ion-icon>
       <ion-label>
         <b>{{'Search'|translate}}</b>
       </ion-label>
     </ion-tab-button>
     <ion-tab-button tab="{{config.getCurrentCategoriesPage()}}">
-      <img *ngIf="showImg()" style="width: 40%;" src="assets/left-menu-icon/category.png">
+      <img *ngIf="showImg()" style="width: 40%;" src="assets/icons-03.svg">
       <ion-icon *ngIf="!showImg()" name="apps"></ion-icon>
       <ion-label>
         <b>{{'Categories'|translate}}</b>
       </ion-label>
     </ion-tab-button>
     <ion-tab-button tab="cart">
-      <img *ngIf="showImg()" src="assets/left-menu-icon/bag.png">
+      <img *ngIf="showImg()" src="assets/assets/icons-04.svg">
       <ion-icon *ngIf="!showImg()" name="basket"></ion-icon>
       <ion-badge mode="ios" color="secondary" [class.bag-fix]="showImg()">{{shared.cartTotalItems()}}</ion-badge>
       <ion-label>
@@ -30,7 +30,7 @@
       </ion-label>
     </ion-tab-button>
     <ion-tab-button tab="settings">
-      <img *ngIf="showImg()" src="assets/left-menu-icon/user.png">
+      <img *ngIf="showImg()" src="assets/assets/icons-05.svg">
       <ion-icon *ngIf="!showImg()" name="person"></ion-icon>
       <ion-label>
         <b>{{'Account'|translate}}</b>
