--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -56,11 +56,11 @@
 
 :root {
   font-size: 16px;
-  --accent-color: #dddddd;
+  --accent-color: #000000;
   --heading-font-size: 0.8rem;
   --sub-heading-font-size: 0.6875rem;
   --ion-color-facebook: #3b5998;
-  --ion-background-color: #ffffff;
+  --ion-background-color: #000000;
   --ion-background-color-rgb: 255, 255, 255;
   --ion-text-color: #000000;
   --ion-text-color-rgb: 0, 0, 0; }
