--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -90,8 +90,8 @@
   --ion-color-primary-rgb: 255, 255, 255;
   --ion-color-primary-contrast: #000000;
   --ion-color-primary-contrast-rgb: 0, 0, 0;
-  --ion-color-primary-shade: #e0e0e0;
-  --ion-color-primary-tint: #ffffff; }
+  --ion-color-primary-shade: #000000;
+  --ion-color-primary-tint: #000000; }
   .white-theme .top-icon-header ion-button {
     color: var(--ion-color-primary-contrast); }
   .white-theme ion-header ion-img {
