--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,4 +1,4 @@
-<ion-tabs style="background-color: #000000;" #appTabs >
+<ion-tabs style="background-color: black;" #appTabs >
   <ion-tab-bar slot="bottom" (click)="ionChange(appTabs)">
     <ion-tab-button tab="{{config.getCurrentHomePage()}}">
       <img *ngIf="showImg()" src="assets/icons-01.svg">
